postgres-service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: postgresdb 
  labels:
    app: postgresdb
spec: 
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgresdb
